--- a/Python/script/Tensorflow1.14.0/tensor keras 1일차_ pipe_grid.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor keras 1일차_ pipe_grid.ipynb
@@ -481,12 +481,12 @@
     "from keras.callbacks import EarlyStopping\n",
     "stopper = EarlyStopping(monitor='var_accuracy', patience=3, verbose=1)\n",
     "# Function to create model, required for KerasClassifier\n",
-    "def create_model(init_mode='uniform',optimizer='relu',dropout_rate=0.1):\n",
+    "def create_model(init_mode='uniform',acti='relu',dropout_rate=0.1):\n",
     "# create model\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(12, input_dim=4, kernel_initializer=init_mode, activation=optimizer))\n",
+    "    model.add(Dense(12, input_dim=4, kernel_initializer=init_mode, activation='relu'))\n",
     "    model.add(Dropout(dropout_rate))\n",
-    "    model.add(Dense(3))\n",
+    "    model.add(Dense(3,activation=acti))\n",
     "    # Compile model\n",
     "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "    return model\n",
@@ -502,8 +502,8 @@
     "# define the grid search parameters\n",
     "dropout_rate=[0.1,0.2,0.3] # ,0.4,0.5,0.6,0.7,0.8,0.9\n",
     "init_mode = ['uniform','normal','zero']# ,'normal','zero','glorot_normal','glorot_uniform','he_normal','he_uniform'\n",
-    "optimizer = ['softmax','relu','sigmoid'] #, 'softplus', 'softsign','tanh','sigmoid','hard_sigmoid','linear'\n",
-    "param_grid = dict(init_mode=init_mode,optimizer=optimizer,dropout_rate=dropout_rate)\n",
+    "acti = ['softmax','relu','sigmoid'] #, 'softplus', 'softsign','tanh','sigmoid','hard_sigmoid','linear'\n",
+    "param_grid = dict(init_mode=init_mode,acti=acti,dropout_rate=dropout_rate)\n",
     "fit_params = dict(callbacks=[stopper])\n",
     "grid = GridSearchCV(estimator=model, param_grid=param_grid, n_jobs=-1, cv=3)\n",
     "# 변동 매개변수\n",
