--- a/Python/script/Tensorflow1.14.0/tensor keras Word2vec.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor keras Word2vec.ipynb
@@ -631,14 +631,14 @@
     "conda install nltk\n",
     "conda install gensim\n",
     "pip install Pyro4\n",
-    "pip install jpype1==0.7.0\n",
+    "pip install jpype1==0.7.1\n",
     "pip install konlpy\n",
     "pip install simplejson\n",
     "pip install pygame\n",
     "pip install pytagcloud\n",
     "pip install bs4\n",
     "pip install wordcloud\n",
-    "# pip install JPype1-0.5.7-cp27-none-win_amd64.whl\n",
+    "# pip install JPype1-0.7.1-cp37-cp37m-win_amd64.whl\n",
     "# https://www.lfd.uci.edu/~gohlke/pythonlibs/#jpype"
    ]
   },
