--- a/Python/pycharm/CNN/keras.ipynb
+++ b/Python/pycharm/CNN/keras.ipynb
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1099,8 +1099,8 @@
     "categories = [\"dog_train\", \"cat_train\"]\n",
     "nb_classes = len(categories)\n",
     "\n",
-    "image_w = 64\n",
-    "image_h = 64\n",
+    "image_w = 100\n",
+    "image_h = 100\n",
     "\n",
     "pixels = image_h * image_w * 3\n",
     "\n",
@@ -1118,7 +1118,7 @@
     "    print(cat, \" 파일 길이 : \", len(files))\n",
     "    for i, f in enumerate(files):\n",
     "        img = Image.open(f)\n",
-    "        img = img.convert(\"L\") # Gray로~ RGB로 할거면 RGB로 하는데 데이터크기가 커서..\n",
+    "        img = img.convert(\"L\") # 그레이는 L # Gray로~ RGB로 할거면 RGB로 하는데 데이터크기가 커서..\n",
     "        img = img.resize((image_w, image_h))\n",
     "        data = np.asarray(img)\n",
     "\n",
@@ -1248,29 +1248,27 @@
     }
    ],
    "source": [
-    "with K.tf_ops.device('/device:GPU:0'):\n",
-    "    model = Sequential()\n",
-    "    model.add(Conv2D(32, (3,3), padding=\"same\", input_shape=X_train.shape[1:], activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(1,1)))\n",
-    "    model.add(Dropout(0.25))\n",
-    "    \n",
-    "    model.add(Conv2D(64, (3,3), padding=\"same\", activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(1,1)))\n",
-    "    model.add(Dropout(0.25))\n",
-    "    \n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(20, activation='relu')) #원래 256\n",
-    "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(nb_classes, activation='softmax'))\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "    model_dir = './model'\n",
-    "    \n",
-    "    if not os.path.exists(model_dir):\n",
-    "        os.mkdir(model_dir)\n",
-    "    \n",
-    "    model_path = model_dir + '/multi_img_classification.model'\n",
-    "    checkpoint = ModelCheckpoint(filepath=model_path , monitor='val_loss', verbose=1, save_best_only=True)\n",
-    "    early_stopping = EarlyStopping(monitor='val_loss', patience=6)"
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, (3,3), padding=\"same\", input_shape=X_train.shape[1:], activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(64, (3,3), padding=\"same\", activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "\n",
+    "model.add(Conv2D(64, (3,3), padding=\"same\", activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(2, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "\n",
+    "model_path = 'multi_img_classification.model'\n",
+    "checkpoint = ModelCheckpoint(filepath=model_path , monitor='val_loss', verbose=2, save_best_only=True)\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=10)"
    ]
   },
   {
@@ -1567,8 +1565,8 @@
     }
    ],
    "source": [
-    "y_vloss = history.history['val_accuracy']\n",
-    "y_loss = history.history['accuracy']\n",
+    "y_vloss = history.history['val_acc']\n",
+    "y_loss = history.history['acc']\n",
     "\n",
     "x_len = np.arange(len(y_loss))\n",
     "\n",
@@ -1632,43 +1630,95 @@
     "from keras.models import load_model\n",
     "\n",
     "caltech_dir = \"C:/Users/ICT01_06/Desktop/dogs-vs-cats/tt\"\n",
-    "image_w = 64\n",
-    "image_h = 64\n",
-    "\n",
-    "pixels = image_h * image_w * 3\n",
+    "image_w = 100\n",
+    "image_h = 100\n",
     "\n",
     "X = []\n",
     "filenames = []\n",
-    "files = glob.glob(caltech_dir+\"/*.*\")\n",
+    "files = glob.glob(\"*.jpg\")\n",
+    "# files = glob.glob(caltech_dir+\"/*.*\")\n",
     "for i, f in enumerate(files):\n",
     "    img = Image.open(f)\n",
-    "    img = img.convert(\"RGB\")\n",
+    "    img = img.convert(\"L\")\n",
     "    img = img.resize((image_w, image_h))\n",
     "    data = np.asarray(img)\n",
     "    filenames.append(f)\n",
     "    X.append(data)\n",
     "\n",
     "X = np.array(X)\n",
+    "X = X.reshape(X.shape[0],100,100,1)\n",
     "model = load_model('./multi_img_classification.model')\n",
     "\n",
     "prediction = model.predict(X)\n",
-    "np.set_printoptions(formatter={'float': lambda x: \"{0:0.3f}\".format(x)})\n",
+    "print(np.set_printoptions(formatter={'float': lambda x: \"{0:0.3f}\".format(x)}))\n",
+    "\n",
+    "print(prediction)\n",
     "cnt = 0\n",
     "\n",
     "#이 비교는 그냥 파일들이 있으면 해당 파일과 비교. 카테고리와 함께 비교해서 진행하는 것은 _4 파일.\n",
     "for i in prediction:\n",
     "    pre_ans = i.argmax()  # 예측 레이블\n",
-    "    print(i)\n",
-    "    print(pre_ans)\n",
     "    pre_ans_str = ''\n",
-    "    if pre_ans == 0: pre_ans_str = \"강아지\"\n",
+    "    if pre_ans == 1: pre_ans_str = \"강아지\"\n",
     "    else: pre_ans_str = \"고양이\"\n",
-    "    if i[0] >= 0.8 : print(\"해당 \"+filenames[cnt].split(\"\\\\\")[1]+\"이미지는 \"+pre_ans_str+\"로 추정됩니다.\")\n",
-    "    if i[1] >= 0.8: print(\"해당 \"+filenames[cnt].split(\"\\\\\")[1]+\"이미지는 \"+pre_ans_str+\"으로 추정됩니다.\")\n",
+    "    if i[0] == 1 : print(\"해당 \"+filenames[cnt].split(\"\\\\\")[0]+\"이미지는 \"+pre_ans_str+\"로 추정됩니다.\")\n",
+    "    if i[1] == 1: print(\"해당 \"+filenames[cnt].split(\"\\\\\")[0]+\"이미지는 \"+pre_ans_str+\"로 추정됩니다.\")\n",
     "    cnt += 1\n",
     "    # print(i.argmax()) #얘가 레이블 [1. 0. 0.] 이런식으로 되어 있는 것을 숫자로 바꿔주는 것.\n",
     "    # 즉 얘랑, 나중에 카테고리 데이터 불러와서 카테고리랑 비교를 해서 같으면 맞는거고, 아니면 틀린거로 취급하면 된다.\n",
     "    # 이걸 한 것은 _4.py에."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\82105\\\\Desktop\\\\bigdata analysis\\\\lytPython\\\\Python\\\\pycharm\\\\CNN'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "cwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_dir = os.path.join('static/customer_img/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'static/customer_img/'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_dir"
    ]
   }
  ],
