--- a/Python/script/기초과정/7일차_db연동.ipynb
+++ b/Python/script/기초과정/7일차_db연동.ipynb
@@ -10,7 +10,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sql_():\n",
+    "    import pymysql\n",
+    "    conn = pymysql.connect(host='13.124.226.221',\n",
+    "                           user='ljkk1542', port=8056, password='maroon3169!@', db='tell119',\n",
+    "                           charset='utf8mb4', use_unicode=True,\n",
+    "                           cursorclass=pymysql.cursors.DictCursor)\n",
+    "    return conn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = '20200322'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sql_()\n",
+    "cur = conn.cursor()\n",
+    "sql =\"\"\"SELECT * FROM Connection_ip where date>= (%s)\"\"\"\n",
+    "cur.execute(sql, '%s'%(date))\n",
+    "row = cur.fetchall()\n",
+    "real = []\n",
+    "for pet in row:\n",
+    "    pet_val = list(pet.values())\n",
+    "    real.append(pet_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['80.104.200.239',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=2558)],\n",
+       " ['103.135.38.249',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=8683)],\n",
+       " ['197.232.79.68',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=8836)],\n",
+       " ['94.70.165.96',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=14837)],\n",
+       " ['94.70.165.96',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=14838)],\n",
+       " ['209.17.96.66',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=15514)],\n",
+       " ['171.67.70.85',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=18743)],\n",
+       " ['185.82.255.29',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=27740)],\n",
+       " ['213.157.39.242',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=29238)],\n",
+       " ['18.217.112.17',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=32796)],\n",
+       " ['162.243.133.185',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=34464)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39093)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39094)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39094)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39095)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39095)],\n",
+       " ['44.225.84.206',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39095)],\n",
+       " ['209.17.96.82',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=39856)],\n",
+       " ['171.67.70.85',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=40449)],\n",
+       " ['51.38.240.154',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=40695)],\n",
+       " ['200.58.220.218',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=41911)],\n",
+       " ['72.27.76.226',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=49467)],\n",
+       " ['5.44.174.14',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=51769)],\n",
+       " ['207.46.13.187',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=57361)],\n",
+       " ['5.255.250.59',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=58154)],\n",
+       " ['95.163.255.99',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=58754)],\n",
+       " ['177.11.136.87',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=60160)],\n",
+       " ['171.67.70.85',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=62448)],\n",
+       " ['123.160.174.151',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=63121)],\n",
+       " ['218.157.138.171',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=64456)],\n",
+       " ['104.238.220.208',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=64559)],\n",
+       " ['42.188.65.28',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=67411)],\n",
+       " ['127.0.0.1', datetime.date(2020, 3, 23), datetime.timedelta(seconds=19622)],\n",
+       " ['200.53.28.136',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=74538)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78813)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78814)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78814)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78815)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78815)],\n",
+       " ['44.224.22.196',\n",
+       "  datetime.date(2020, 3, 22),\n",
+       "  datetime.timedelta(seconds=78815)]]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ip = []\n",
+    "date = []\n",
+    "for i,q in enumerate(real):\n",
+    "    ip.append(q[0])\n",
+    "    date.append(q[1].strftime('%Y%m%d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = pd.DataFrame(ip,columns=['IP'])\n",
+    "bb = pd.DataFrame(date,columns=['DATE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(aa,bb, how='outer', left_index=True,right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "761"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>218.157.138.171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                IP\n",
+       "1  218.157.138.171"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1:2,:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      218.157.138.171\n",
+       "1      218.157.138.171\n",
+       "2           39.7.59.32\n",
+       "3      192.241.198.223\n",
+       "4         54.203.58.10\n",
+       "            ...       \n",
+       "756    218.157.138.171\n",
+       "757    104.238.220.208\n",
+       "758       42.188.65.28\n",
+       "759          127.0.0.1\n",
+       "760      200.53.28.136\n",
+       "Name: IP, Length: 761, dtype: object"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['IP']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +365,10 @@
     {
      "data": {
       "text/plain": [
-       "<bound method Connection.close of <pymysql.connections.Connection object at 0x000001F807D328C8>>"
+       "<bound method Connection.close of <pymysql.connections.Connection object at 0x00000296FD8E35C8>>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +376,138 @@
    "source": [
     "import pymysql\n",
     "# 네트워크 접속은 os관리\n",
-    "conn = pymysql.connect(host = '192.168.1.178',\n",
+    "conn = pymysql.connect(host = '13.124.226.221',\n",
+    "                      user ='ljkk1542', port=8056, password='maroon3169!@', db='tell119',\n",
+    "                      charset = 'utf8mb4', use_unicode=True,\n",
+    "                      cursorclass = pymysql.cursors.DictCursor)\n",
+    "\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"Create table inquire ( id INT NOT NULL AUTO_INCREMENT, \\\n",
+    "           name VARCHAR(20),\\\n",
+    "           email TEXT,\\\n",
+    "           text TEXT,\\\n",
+    "           IP_address TEXT,\\\n",
+    "           mmdd TEXT,\\\n",
+    "           PRIMARY KEY (id)) ENGINE = InnoDB AUTO_INCREMENT=1\")\n",
+    "print(cur.description)\n",
+    "conn.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020-03-08 15:50:19'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "date = time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(time.time()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'sfsdfafjk'\n",
+    "email = 'ea@naver.com'\n",
+    "text = 'asfd특수문자fasd 실험입니다. ★qweqew 니니니님아ㅇ'\n",
+    "ip = '125.15.3.5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql\n",
+    "conn = pymysql.connect(host = 'localhost',\n",
+    "                      user ='root', port=3306, password='root', db='tell119',\n",
+    "                      charset = 'utf8mb4', use_unicode=True,\n",
+    "                      cursorclass = pymysql.cursors.DictCursor)\n",
+    "\n",
+    "cur = conn.cursor()\n",
+    "sql =\"\"\"INSERT INTO inquire (name, email, text, IP_address, mmdd)\n",
+    "    VALUES(%s, %s, %s, %s, %s)\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "cur.execute(sql, ('%s'%(name), '%s'%(email),'%s'%(text), '%s'%(ip), '%s'%(date)))\n",
+    "\n",
+    "# cur.execute(sql, ('ljkk1542', '텍스트 문의드립니다.'))\n",
+    "# cur.execute(sql, ('영구영구', '텍스트 문의드립니다. 잘 지내시죠?'))\n",
+    "# cur.execute(sql, ('영구영구2', '텍스트 문의드립니다. ggggggqweqejasdkhda test 입니다.'))\n",
+    "\n",
+    "\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sfsdfafjk'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'%s'%(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Connection.close of <pymysql.connections.Connection object at 0x00000296FD6C4388>>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "# 네트워크 접속은 os관리\n",
+    "conn = pymysql.connect(host = 'localhost',\n",
     "                      user ='root', port=3306, password='root', db='acornschool',\n",
     "                      charset = 'utf8mb4', use_unicode=True,\n",
     "                      cursorclass = pymysql.cursors.DictCursor)\n",
@@ -53,11 +526,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = pymysql.connect(host = '192.168.1.178',\n",
+    "conn = pymysql.connect(host = 'localhost',\n",
     "                      user ='root', port=3306, password='root', db='acornschool',\n",
     "                      charset = 'utf8mb4', use_unicode=True,\n",
     "                      cursorclass = pymysql.cursors.DictCursor)\n",
@@ -655,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
