--- a/Python/script/기초과정/7일차_db연동.ipynb
+++ b/Python/script/기초과정/7일차_db연동.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20200325_04:31:53'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "current = datetime.datetime.now()\n",
+    "nine_hour_later = current + datetime.timedelta(hours=9)\n",
+    "date = nine_hour_later.strftime(\"%Y%m%d_%H:%M:%S\")\n",
+    "date"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,143 +91,6 @@
     "for pet in row:\n",
     "    pet_val = list(pet.values())\n",
     "    real.append(pet_val)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['80.104.200.239',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=2558)],\n",
-       " ['103.135.38.249',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=8683)],\n",
-       " ['197.232.79.68',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=8836)],\n",
-       " ['94.70.165.96',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=14837)],\n",
-       " ['94.70.165.96',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=14838)],\n",
-       " ['209.17.96.66',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=15514)],\n",
-       " ['171.67.70.85',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=18743)],\n",
-       " ['185.82.255.29',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=27740)],\n",
-       " ['213.157.39.242',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=29238)],\n",
-       " ['18.217.112.17',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=32796)],\n",
-       " ['162.243.133.185',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=34464)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39093)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39094)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39094)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39095)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39095)],\n",
-       " ['44.225.84.206',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39095)],\n",
-       " ['209.17.96.82',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=39856)],\n",
-       " ['171.67.70.85',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=40449)],\n",
-       " ['51.38.240.154',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=40695)],\n",
-       " ['200.58.220.218',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=41911)],\n",
-       " ['72.27.76.226',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=49467)],\n",
-       " ['5.44.174.14',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=51769)],\n",
-       " ['207.46.13.187',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=57361)],\n",
-       " ['5.255.250.59',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=58154)],\n",
-       " ['95.163.255.99',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=58754)],\n",
-       " ['177.11.136.87',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=60160)],\n",
-       " ['171.67.70.85',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=62448)],\n",
-       " ['123.160.174.151',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=63121)],\n",
-       " ['218.157.138.171',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=64456)],\n",
-       " ['104.238.220.208',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=64559)],\n",
-       " ['42.188.65.28',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=67411)],\n",
-       " ['127.0.0.1', datetime.date(2020, 3, 23), datetime.timedelta(seconds=19622)],\n",
-       " ['200.53.28.136',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=74538)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78813)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78814)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78814)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78815)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78815)],\n",
-       " ['44.224.22.196',\n",
-       "  datetime.date(2020, 3, 22),\n",
-       "  datetime.timedelta(seconds=78815)]]"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "real"
    ]
   },
   {
