--- a/Python/script/numpy,pandas/9일차.ipynb
+++ b/Python/script/numpy,pandas/9일차.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 미분 : \n",
     "# 분산 : (sigma(관측치 - 평균)^2) / n-1\n",
@@ -30,7 +32,7 @@
     "# 회귀분석 , 상관분석\n",
     "- 회귀분석 다중공선성 : 종속변수가 과하게 영향을 받을 수 있음.\n",
     "- 회귀분석 자기상관성(Autocorelation)이 존재 : -> 시계열 분석\n",
-    "- 시계열분석 ARMA (Autocorelation + Moving Average)\n",
+    "- 시계열분석 ARIMA (Autocorelation + Moving Average)\n",
     "    - 이동평균법(주파수를 줄여줌 -> 복잡하면 분석 불가)\n",
     "    - 자기상관성 ( 오늘데이터가 내일 영향을 미치고 모레 영향을 미치는것.)\n",
     "    - 정상성을 띈 데이터에만 가능\n",
@@ -2858,7 +2860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
