--- a/Python/script/numpy,pandas/9일차.ipynb
+++ b/Python/script/numpy,pandas/9일차.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 미분 : \n",
+    "# 미분 : 변화율 측정\n",
     "# 분산 : (sigma(관측치 - 평균)^2) / n-1\n",
     "# 표준편차 : root((sigma(관측치 - 평균)^2) / n-1)\n",
     "# 공분산 : sigma(x - xbar)*(y - yvar) / n-1\n",
     "# 상관계수 : (sigma(x - xbar)*(y - yvar) / n-1) / (xsigma * ysigma) : -1 ~ 1\n",
     "# 거리값 : 각 요소의 차의 제곱을 루트로 구함\n",
     "# model 평가 : MSE(mean square error) : 연속된 수치인 경우의 평가\n",
-    "#             RMSE(root)\n",
+    "#             RMSE(root(MSE))\n",
     "# 신경망에서 cost function 비용함수 : (예측치 - 관측치) -> back propagation\n",
     "#                                               (역전파를 통해서 가중치를 수정)"
    ]
