--- a/Python/script/Tensorflow1.14.0/tensor keras 1일차_ pipe_grid.ipynb
+++ b/Python/script/Tensorflow1.14.0/tensor keras 1일차_ pipe_grid.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
     "\n",
     "def create_model():\n",
     "    model = Sequential()\n",
@@ -83,9 +83,9 @@
     "# Use scikit-learn to grid search the weight initialization\n",
     "import numpy\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
     "# Function to create model, required for KerasClassifier\n",
     "def create_model(init_mode='uniform',optimizer='relu'):\n",
     "    # create model\n",
@@ -138,10 +138,10 @@
     "# Use scikit-learn to grid search the weight initialization\n",
     "import numpy\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "stopper = EarlyStopping(monitor='var_accuracy', patience=3, verbose=1)\n",
     "# Function to create model, required for KerasClassifier\n",
     "def create_model(init_mode='uniform',optimizer='relu',dropout_rate=0.1):\n",
@@ -210,11 +210,11 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from keras.callbacks import EarlyStopping\n",
-    "from keras.wrappers.scikit_learn import KerasRegressor\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasRegressor\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -416,9 +416,9 @@
     "import numpy\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
     "\n",
     "def create_model():\n",
     "    model = Sequential()\n",
@@ -475,10 +475,10 @@
     "# Use scikit-learn to grid search the weight initialization\n",
     "import numpy\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "stopper = EarlyStopping(monitor='var_accuracy', patience=3, verbose=1)\n",
     "# Function to create model, required for KerasClassifier\n",
     "def create_model(init_mode='uniform',acti='relu',dropout_rate=0.1):\n",
@@ -534,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
