--- a/Python/script/numpy,pandas/008_pandas3.ipynb
+++ b/Python/script/numpy,pandas/008_pandas3.ipynb
@@ -299,6 +299,7 @@
     }
    ],
    "source": [
+    "df[3] = np.nan\n",
     "df.dropna(axis='columns', how='all') #모두가 nan이면 없애라"
    ]
   },
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1689,51 +1690,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>18-25</td>\n",
+       "      <th>18-25</th>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>18-25</td>\n",
+       "      <th>18-25</th>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25-35</td>\n",
+       "      <th>25-35</th>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25-35</td>\n",
+       "      <th>25-35</th>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>18-25</td>\n",
+       "      <th>18-25</th>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>18-25</td>\n",
+       "      <th>18-25</th>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>35-60</td>\n",
+       "      <th>35-60</th>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25-35</td>\n",
+       "      <th>25-35</th>\n",
        "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>60-100</td>\n",
+       "      <th>60-100</th>\n",
        "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>35-60</td>\n",
+       "      <th>35-60</th>\n",
        "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>35-60</td>\n",
+       "      <th>35-60</th>\n",
        "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25-35</td>\n",
+       "      <th>25-35</th>\n",
        "      <td>32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1756,7 +1757,7 @@
        "25-35   32"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1765,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from numpy import array, bin_\n",
+    "from numpy import array\n",
     "# 다음 데이터를 18~25, 25~35, 35~60, 60~100 사이의 값으로 범주화하시오\n",
     "# 나으 풀이\n",
     "ages = [20,22,25,27,21,24,37,31,61,45,41,32]\n",
@@ -1779,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1839,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-fecd02037a0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mbins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntervalIndex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbins\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclosed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'right'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_bins\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-25-fecd02037a0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mbins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntervalIndex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_tuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbins\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclosed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'right'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_bins\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name '_bins' is not defined"
      ]
     }
@@ -3342,7 +3343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
